skins/larry/mail.css
/* ... */
h2.subject {
	font-size: 15px;
	margin: 0 15em 0 0;
	padding: 4px 8px 2px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

h3.subject {
	font-size: 14px;
	margin: 0 8em 0 0;
	padding: 8px 8px 4px 8px;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
}

.headers-table td {
	color: #666;
	padding: 2px 8px;
}

.headers-table td.header {
	font-weight: bold;
}

.headers-table td.header a {
	color: #666;
	text-decoration: none;
}

.headers-table td.header a:hover {
	text-decoration: underline;
}

.headers-table td.subject {
	color: #333;
	font-size: 110%;
	font-weight: bold;
}

.headers-table td.header span {
	white-space: nowrap;
}

.rcmaddcontact {
	position: relative;
	top: 1px;
	margin-left: 0.5em;
}

.rcmaddcontact imp {
	width: 20px;
	height: 13px;
}

#preview-allheaders {
	display: none;
}

#preview-shortheaders td.header-title {
	padding-right: 0;
}

#preview-shortheaders td.header {
	padding-right: 12px;
}

#previewheaderstoggle {
    width: 16px;
    height: 16px;
    padding: 0;
    margin-top: 5px;
    position: absolute;
    outline: none;
}

#previewheaderstoggle.iconlink.add {
	background-position: -32px -227px;
}

#previewheaderstoggle.iconlink.remove {
	background-position: -32px -242px;
}

div.more-headers {
	cursor: pointer;
	height: 10px;
	background: url(images/buttons.png) center -1619px no-repeat;
}

div.hide-headers {
	background-position: center -1629px;
}

#all-headers {
    position: relative;
	margin: 0 10px;
	padding: 0;
	height: 180px;
	border: 1px solid #bbb;
	border-radius: 4px;
	background: #fff;
}

#headers-source {
	display: none;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	padding: 2px 5px;
	overflow: auto;
	text-align: left;
	color: #333;
}

#messagepreviewheader {
	margin: 0 8px;
	padding-bottom: 8px;
	border-bottom: 2px solid #f0f0f0;
}

#messagepreviewheader .headers-table {
	margin-left: 8px;
}

#messagepreviewheader h3.subject {
	padding-left: 0;
}

#messagepreviewheader #countcontrols,
#messageheader #countcontrols {
	position: absolute;
	top: 8px;
	right: 8px;
	width: 18em;
	text-align: right;
	white-space: nowrap;
}

#messageheader .pagenav .countdisplay {
	min-width: 0;
	padding-right: 0.5em;
	white-space: nowrap;
}

#messagecontent .leftcol,
#messagepreview .leftcol {
	margin-right: 250px;
}

#messagecontent .rightcol,
#messagepreview .rightcol {
	float: right;
/*
	position: absolute;
	top: 10px;
	right: 10px;
	height: 90%;
*/
	width: 230px;
	margin: 8px;
	min-height: 200px;
	background: #f0f0f0;
	padding: 8px;
}

#messagebody {
	margin: 8px;
}

#message-objects div,
#messagebody span.part-notice {
	margin: 8px;
}

#message-objects div.notice,
#message-buttons div.notice {
	display: block;
	color: #960;
	border: 1px solid #ffdf0e;
	background-color: #fef893;
	background-position: 5px -85px;
	padding: 6px 12px 4px 30px;
	white-space: normal;
}

#message-objects div a.button,
#messagebody span.part-notice a.button {
	margin-left: 10px;
}

div.message-part,
div.message-htmlpart {
	padding: 10px 2px;
	border-top: 2px solid #f0f0f0;
}

#messagebody div:first-child {
	border-top: 0;
}

div.message-part pre,
div.message-htmlpart pre,
div.message-part div.pre {
	margin: 0px;
	padding: 0px;
	font-family: monospace;
	white-space: -moz-pre-wrap !important;
	white-space: pre-wrap !important;
	white-space: pre;
}

div.message-part span.sig {
	color: #666666;
}

div.message-part blockquote {
	color: blue;
	border-left: 2px solid blue;
	border-right: 2px solid blue;
	background-color: #F6F6F6;
	margin: 2px 0px 2px 0px;
	padding: 1px 8px 1px 10px;
}

div.message-part blockquote blockquote {
	color: green;
	border-left: 2px solid green;
	border-right: 2px solid green;
}

div.message-part blockquote blockquote blockquote {
	color: #990000;
	border-left: 2px solid #bb0000;
	border-right: 2px solid #bb0000;
}

#messagebody > hr {
	color: #fff;
	background: #fff;
	border: 0;
	border-bottom: 2px solid #f0f0f0;
}

#messagebody > p > img {
	max-width: 80%;
}

#messagepartcontainer {
	position: absolute;
	top: 60px;
	left: 0px;
	right: 0px;
	bottom: 0px;
}

#messagepartframe {
	border: 0;
}

/*** message composition ***/

#composeview-left {
	position: absolute;
	top: 0;
	left: 0;
	width: 250px;
	bottom: 0;
}

#composeview-right {
	position: absolute;
	top: 0;
	left: 262px;
	right: 0;
	bottom: 0;
}

#compose-contacts {
	position: absolute;
	top: 42px;
	left: 0;
	width: 100%;
	bottom: 0;
}

#compose-contacts #directorylist {
	border-bottom: 4px solid #c7e3ef;
}

#compose-contacts .scroller {
	top: 65px;
	border-top: 1px solid #fff;
}

#contacts-table {
	table-layout: fixed;
}

#contacts-table td {
	width: 100%;
}

#contacts-table td span {
	display: block;
}

#compose-contacts li a, #contacts-table td {
	background: url(images/listicons.png) -100px 0 no-repeat;
	overflow: hidden;
	padding-left: 36px;
	text-overflow: ellipsis;
}

#contacts-table tr:first-child td {
	border-top: 0;
}

#compose-contacts li.addressbook a {
	background-position: 6px -766px;
}

#compose-contacts li.addressbook.selected a {
	background-position: 6px -791px;
}

#contacts-table td.contactgroup {
	background-position: 6px -1555px;
}

#contacts-table tr.unfocused td.contactgroup,
#contacts-table tr.selected td.contactgroup {
	background-position: 6px -1579px;
}

#contacts-table td.contact {
	background-position: 6px -1603px;
}

#contacts-table tr.unfocused td.contact,
#contacts-table tr.selected td.contact {
	background-position: 6px -1627px;
}


#compose-content {
	position: absolute;
	top: 42px;
	left: 0;
	width: 100%;
	bottom: 28px;
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	overflow: hidden;
}

#composeheaders {
	border-radius: 4px 4px 0 0;
	-webkit-box-shadow: 0 2px 3px 0 #999;
	-moz-box-shadow: 0 2px 3px 0 #999;
	box-shadow: 0 2px 3px 0 #999;
}

#composebuttons {
	position: absolute;
	top: 8px;
	right: 8px;
	width: auto;
	white-space: nowrap;
	z-index: 100;
}

.compose-headers {
	width: 99%;
	margin: 4px 0;
}
/* ... */

